@@ -224,7 +224,7 @@ static void
 table_format_timestamp__(char *s, size_t size)
 {
     time_t now = time_wall();
-    strftime(s, size, "%Y-%m-%d %H:%M:%S", localtime(&now));
+    strftime(s, size, "%Y-%m-%d %H:%M:%S", gmtime(&now));
 }
 
 static void
